[gd_scene load_steps=30 format=3 uid="uid://nx575y374vu0"]

[ext_resource type="PackedScene" uid="uid://6vv6hamy0lec" path="res://scenes/player.tscn" id="1_3t8mw"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_hsp4a"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_q7br7"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="3_y70rt"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/phantom_camera_noise_3d.gd" id="4_2tsec"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_521t4"]
[ext_resource type="PackedScene" uid="uid://caa3j1qu70bff" path="res://scenes/ammazzazanzare.tscn" id="6_30wm7"]
[ext_resource type="PackedScene" uid="uid://bljyg7s2ot3wp" path="res://scenes/spawner.tscn" id="7_x8126"]
[ext_resource type="PackedScene" uid="uid://dlt31xhqteilt" path="res://scenes/menu.tscn" id="10_3bv43"]
[ext_resource type="PackedScene" uid="uid://doj0jc4b6t6kx" path="res://scenes/spider_web.tscn" id="12_7w5xw"]
[ext_resource type="PackedScene" uid="uid://b1fiif4oa2a5i" path="res://scenes/toilet.tscn" id="12_iv7n4"]
[ext_resource type="PackedScene" uid="uid://bkjqa3wre8ebf" path="res://scenes/porta con foro.tscn" id="14_iyj8h"]
[ext_resource type="PackedScene" uid="uid://guf57hx6ya5l" path="res://scenes/level2.tscn" id="15_5yl4f"]
[ext_resource type="PackedScene" uid="uid://bfxiygrfmr1gf" path="res://scenes/lavamano.tscn" id="15_yc5bg"]
[ext_resource type="PackedScene" uid="uid://dk5a0ba13xsrv" path="res://scenes/finestra.tscn" id="16_m23r2"]
[ext_resource type="PackedScene" uid="uid://b2stq87rmsgtf" path="res://scenes/porta chiusa.tscn" id="16_yndvm"]
[ext_resource type="PackedScene" uid="uid://cpjqp3j5vof4d" path="res://scenes/bed.tscn" id="18_7lwk8"]
[ext_resource type="PackedScene" uid="uid://b86h0eq6svtdr" path="res://scenes/sedia.tscn" id="19_lfr3f"]
[ext_resource type="PackedScene" uid="uid://cm4ut6tx3wa2r" path="res://scenes/bicchiere.tscn" id="20_ax4rj"]
[ext_resource type="PackedScene" uid="uid://d2n13eim6qfa8" path="res://scenes/libro.tscn" id="21_ddy33"]
[ext_resource type="PackedScene" uid="uid://cccmj3hk13wbr" path="res://scenes/tavolo.tscn" id="21_uei0f"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_mjk4t"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ixbn2"]
sky_material = SubResource("ProceduralSkyMaterial_mjk4t")

[sub_resource type="Environment" id="Environment_mxysm"]
background_mode = 2
sky = SubResource("Sky_ixbn2")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Resource" id="Resource_num0l"]
script = ExtResource("4_521t4")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_5vvbj"]
script = ExtResource("4_2tsec")
amplitude = 10.0
frequency = 0.2
randomize_noise_seed = 1
noise_seed = 0
rotational_noise = true
positional_noise = false
rotational_multiplier_x = 1.0
rotational_multiplier_y = 1.0
rotational_multiplier_z = 1.0
positional_multiplier_x = 1.0
positional_multiplier_y = 1.0
positional_multiplier_z = 1.0

[sub_resource type="Resource" id="Resource_6yr6m"]
script = ExtResource("4_521t4")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Animation" id="Animation_6cqw8"]
resource_name = "caduta_libri"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0l4ra"]
_data = {
"caduta_libri": SubResource("Animation_6cqw8")
}

[node name="Node" type="Node3D"]
script = ExtResource("1_hsp4a")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mxysm")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true
sky_mode = 2

[node name="Camera3D" type="Camera3D" parent="."]
physics_interpolation_mode = 2
transform = Transform3D(0.971973, 0.0471123, -0.230324, -1.86265e-09, 0.979715, 0.200398, 0.235093, -0.194782, 0.952256, -2.52927, 2.44221, 2.18822)
current = true

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("1_q7br7")

[node name="Player" parent="." instance=ExtResource("1_3t8mw")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.981708, 0)
axis_lock_angular_x = true
axis_lock_angular_z = true

[node name="CameraTarget" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -4)

[node name="PhantomCamera3D" type="Node3D" parent="." node_paths=PackedStringArray("follow_target", "look_at_target")]
transform = Transform3D(-0.999999, 0, 0, 0, 0.970142, 0.242536, 0, 0.242535, -0.970144, 0, 3.98171, -4)
top_level = true
script = ExtResource("3_y70rt")
follow_mode = 2
follow_target = NodePath("../Player/CameraTarget")
look_at_mode = 2
look_at_target = NodePath("../Player")
tween_resource = SubResource("Resource_num0l")
follow_damping = true
look_at_offset = Vector3(0, 2, 0)
look_at_damping = true
look_at_damping_value = 0.2
noise = SubResource("Resource_5vvbj")

[node name="PhantomCamera3DMenu" type="Node3D" parent="." node_paths=PackedStringArray("look_at_target")]
transform = Transform3D(0.971972, 0.0471123, -0.230324, -1.86264e-09, 0.979714, 0.200398, 0.235093, -0.194782, 0.952255, -2.52927, 2.44221, 2.18822)
script = ExtResource("3_y70rt")
priority = 1
look_at_mode = 2
look_at_target = NodePath("../Player")
tween_resource = SubResource("Resource_6yr6m")
look_at_offset = Vector3(-2, 1, 0)

[node name="Menu" parent="." instance=ExtResource("10_3bv43")]

[node name="crack_house_v2" parent="." instance=ExtResource("15_5yl4f")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 62.5215, -27.3398, 30.028)

[node name="Enviroment" type="Node" parent="."]

[node name="toilet" parent="Enviroment" instance=ExtResource("12_iv7n4")]
transform = Transform3D(-1.74846e-06, 0, -40, 0, 40, 0, 40, 0, -1.74846e-06, 39.234, -27.3669, -3.66593)

[node name="Spawner" parent="Enviroment/toilet" instance=ExtResource("7_x8126")]
transform = Transform3D(-1.09278e-09, 0, 0.025, 0, 0.025, 0, -0.025, 0, -1.09278e-09, 0.00727036, 0.2823, 0.164784)
spawner_type = 3
spawn_scale = Vector2(3, 4)
speed_range = Vector2(1, 2)

[node name="porta con foro" parent="Enviroment" instance=ExtResource("14_iyj8h")]
transform = Transform3D(-30, 2.29282e-13, 2.62268e-06, 0, -30, 2.62268e-06, 2.62268e-06, 2.62268e-06, 30, 27.2156, 37.9814, 29.9767)

[node name="spider_web" parent="Enviroment/porta con foro" instance=ExtResource("12_7w5xw")]
transform = Transform3D(-0.233333, 0, 2.03986e-08, 1.78331e-15, -0.233333, 2.03986e-08, 2.03986e-08, 2.03986e-08, 0.233333, 0.133548, 2.06095, -0.0151508)

[node name="lavamano" parent="Enviroment" instance=ExtResource("15_yc5bg")]
transform = Transform3D(-1.31134e-06, 0, 30, 0, 30, 0, -30, 0, -1.31134e-06, -29.3208, -26.907, -0.612659)

[node name="Finestra" parent="Enviroment" instance=ExtResource("16_m23r2")]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, 9.87897, -2.64263, -27.3103)

[node name="porta chiusa" parent="Enviroment" instance=ExtResource("16_yndvm")]
transform = Transform3D(-1.31134e-06, 0, 30, 0, 30, 0, -30, 0, -1.31134e-06, -36.0976, -27.5055, 62.7341)

[node name="bed" parent="Enviroment" instance=ExtResource("18_7lwk8")]
transform = Transform3D(-1.31134e-06, 0, -30, 0, 30, 0, 30, 0, -1.31134e-06, 127.681, -27.3178, 0.352414)

[node name="sedia" parent="Enviroment" instance=ExtResource("19_lfr3f")]
transform = Transform3D(18.1714, 0, 35.6342, 0, 40, 0, -35.6342, 0, 18.1714, 29.8605, -27.4155, 124.512)

[node name="bicchiere" parent="Enviroment" instance=ExtResource("20_ax4rj")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 31.0847, -10.7163, 126.943)

[node name="Spawner" parent="Enviroment/bicchiere" instance=ExtResource("7_x8126")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.84229, 0)
spawner_type = 4

[node name="tavolo" parent="Enviroment" instance=ExtResource("21_uei0f")]
transform = Transform3D(25.1989, 0, 50.8764, 0, 40, 0, -68.7218, 0, 18.6554, 60.1378, -30.9264, 130.956)

[node name="Libri e ammazzazanzare" type="Node" parent="."]

[node name="Ammazzazanzare" parent="Libri e ammazzazanzare" instance=ExtResource("6_30wm7")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 55.7953, -3.03309, 135.366)

[node name="Node3D" parent="Libri e ammazzazanzare" instance=ExtResource("21_ddy33")]
transform = Transform3D(2.04592, -2.19402, 0.0220211, -1.24952e-09, 0.0301091, 2.99985, -2.19413, -2.04582, 0.0205336, 47.1716, 0.794804, 158.246)

[node name="Node3D2" parent="Libri e ammazzazanzare" instance=ExtResource("21_ddy33")]
transform = Transform3D(1.6952, -2.47501, 0.0248414, -1.1805e-09, 0.0301091, 2.99985, -2.47513, -1.69512, 0.0170137, 47.1716, 3.59474, 157.351)

[node name="Node3D3" parent="Libri e ammazzazanzare" instance=ExtResource("21_ddy33")]
transform = Transform3D(1.37157, -2.66797, 0.0267781, -1.1805e-09, 0.0301091, 2.99985, -2.66811, -1.3715, 0.0137656, 47.2934, 6.69338, 156.723)

[node name="Node3D4" parent="Libri e ammazzazanzare" instance=ExtResource("21_ddy33")]
transform = Transform3D(1.82204, -2.38319, 0.0239198, -2.86275e-09, 0.0301091, 2.99985, -2.38331, -1.82195, 0.0182867, 47.0499, 9.49332, 154.851)

[node name="Node3D5" parent="Libri e ammazzazanzare" instance=ExtResource("21_ddy33")]
transform = Transform3D(1.00537, -2.82638, 0.028368, -2.86275e-09, 0.0301091, 2.99985, -2.82652, -1.00532, 0.0100903, 47.0499, 12.5703, 153.509)

[node name="Node3D6" parent="Libri e ammazzazanzare" instance=ExtResource("21_ddy33")]
transform = Transform3D(1.25351, -2.72543, 0.0273548, -2.20465e-09, 0.0301091, 2.99985, -2.72557, -1.25344, 0.0125807, 47.0499, 15.5723, 153.509)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Libri e ammazzazanzare"]
libraries = {
"": SubResource("AnimationLibrary_0l4ra")
}

[connection signal="game_start" from="Menu" to="." method="start_game"]
